name:                sync-soccer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/huffyhenry/sync.soccer
license:             AllRightsReserved
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sync-soccer
  hs-source-dirs:      src
  main-is:             SyncMain.hs
  other-modules:       Tracab, F24
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , datetime
    , containers
    , split
    , xml
    , bytestring

executable visualise-tracab
  hs-source-dirs:      src
  main-is:             VisualiseTracab.hs
  other-modules:       Tracab
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , containers
    , split
    , gloss
