name:                sync-soccer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/huffyhenry/sync.soccer
license:             AllRightsReserved
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sync-soccer
  hs-source-dirs:      src
  main-is:             SyncMain.hs
  other-modules:       Tracab, F24, NeedlemanWunsch, XmlUtils
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , datetime
    , containers
    , split
    , xml
    , bytestring
    , array

-- See https://stackoverflow.com/questions/32123475/profiling-builds-with-stack
-- for how to invoke stack build and stack exec with profiling.
executable sync-soccer-profile
  hs-source-dirs:      src
  main-is:             SyncMain.hs
  other-modules:       Tracab, F24, NeedlemanWunsch, XmlUtils
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , datetime
    , containers
    , split
    , xml
    , bytestring
    , array
  ghc-options: -prof -rtsopts

executable sync-soccer-parse
  hs-source-dirs:      src
  main-is:             ParseMain.hs
  other-modules:       Tracab, F24, XmlUtils
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , datetime
    , containers
    , split
    , xml
    , bytestring
    , array



executable visualise-tracab
  hs-source-dirs:      src
  main-is:             VisualiseTracab.hs
  other-modules:       Tracab, Visualise, XmlUtils, Colors
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , containers
    , split
    , gloss
    , xml
    , bytestring
    , datetime

executable visualise-opta
  hs-source-dirs:      src
  main-is:             VisualiseOpta.hs
  other-modules:       Tracab, XmlUtils, F24, Visualise, Colors
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , containers
    , split
    , gloss
    , xml
    , bytestring
    , datetime
