name:                sync-soccer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/huffyhenry/sync.soccer
license:             AllRightsReserved
license-file:        LICENSE
author:              Allan Clark and Marek Kwiatkowski
maintainer:          info@sync.soccer
copyright:           2018-2019 Allan Clark and Marek Kwiatkowski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- See https://stackoverflow.com/questions/32123475/profiling-builds-with-stack
-- for how to invoke stack build and stack exec with profiling.
executable sync-soccer
  hs-source-dirs:      src
  main-is:             SyncMain.hs
  other-modules:       Tracab, F24, Scoring, NeedlemanWunsch, XmlUtils, Csvs
  default-language:    Haskell2010
  ghc-options:         -O -fPIC
-- ld-options:          -static
  build-depends:
      base >= 4.7 && < 5
    , datetime
    , containers
    , split
    , xml
    , bytestring
    , array
    , statistics
    , optparse-applicative
    , hmatrix
